--- a/sp/css/layout/_responsive.scss
+++ b/sp/css/layout/_responsive.scss
@@ -1,9 +1,9 @@
 /*-----------------------
-        Responsive for device < 780px
+        Responsive for device < 680px
 -----------------------------------------*/
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
     html {
-        font-size: 5px;
+        font-size: 7px;
     }
     .is_pc {
         display: none;
@@ -11,52 +11,130 @@
     .is_sp {
         display: inherit;
     }
-    /*------------------- Typography_SP -------------------*/
-    .title_h2 {
-        // font-size: 24px;
-        // color: $color-primary;
-        // line-height: 1.8;
-        // font-weight: bold;
+    .w100 {
+        width: 100%!important;
     }
-    .title_h3 {
-        // font-size: 24px;
-        // line-height: 1.8;
-        // color: $color-primary;
-        // font-weight: bold;
+    .maxW60 {
+        max-width: 60%;
     }
-    .title_h4 {
-        // font-size: 24px;
-        // color: $color-primary;
-        // line-height: 1.8;
-        // font-weight: bold;
+    .support {
+        width: 80%;
     }
-    .text {
-        // padding:
-        // font-size: ;
-        // color:
+    .ctrbtn {
+        width: 80%;
     }
-
-    /*------------------- Form_SP -------------------*/
-    input {
-        // padding:
-        // border:
-        &:focus {
-
+    .ctrbtn2 {
+        width: 50%;
+        margin: auto;
+    }
+    .content_main {
+        .icon_dolar {
+            width: 22rem;
+        }
+        .sticker {
+            width: 32%;
         }
     }
-    select {
-        // padding:
-        // border:
+    .local_02 {
+        .wrapListNews {
+            //  background-size: contain;
+            padding-bottom: 1rem;
+            .listNews {
+                top: -5rem;
+            }
+        }
+        .textNews {
+            max-width: inherit;
+            padding-right: 3rem;
+            width: 60%;
+        }
+        .thumbImg {
+            width: 40%;
+        }
     }
-    textarea {
-        // padding:
-        // border:
+    .local_03 {
+        padding-top: 5rem;
+        .handScroll {
+            width: 50%;
+        }
     }
-    .btn {
-        // padding:
-        // border:
-        // background:
-        // font-size:
-        // color:
+    .local_04 {
+        padding-bottom: 5rem;
+        .wrapList {
+            .listFade01 {
+                padding-left: 2rem;
+                padding-bottom: 6rem;
+                .itemsFade {
+                    width: 44%;
+                }
+                .desFade {
+                    width: 52%;
+                }
+            }
+        }
+    }
+    .local_05 {
+        .listAds02 {
+            background-size: contain;
+        }
+    }
+    .local_09 {
+        .listItems {
+            padding-top: 3rem;
+            .text {
+                padding-right: 0;
+            }
+            .items {
+                width: 55%;
+                &.avatar {
+                    width: 40%;
+                }
+            }
+        }
+    }
+    .local_10 {
+        .listFade {
+            padding: 0 2rem;
+        }
+    }
+    .local_11 {
+        .arrowstep {
+            background-size: contain;
+        }
+    }
+}
+/*-----------------------
+        Responsive for device < 590px
+-----------------------------------------*/
+@media screen and (max-width: 590px) {
+    html {
+        font-size: 5px;
+    }
+
+    .local_02 {
+        .local_02_item01 {
+            .textNews {
+                max-width: 42rem;
+            }
+            .thumbImg {
+                width: 50%;
+            }
+        }
+    }
+}
+/*-----------------------
+        Responsive for device < 350px
+-----------------------------------------*/
+@media screen and (max-width: 350px) {
+    .w398 {
+        width: 32rem;
+    }
+    .local_06 {
+        .listItems {
+            .imgThumb {
+                top: 28%;
+                width: 30%;
+            }
+        }
     }
 }
