--- a/sp/css/layout/_footer.scss
+++ b/sp/css/layout/_footer.scss
@@ -2,17 +2,20 @@
         Footer
 ======================================*/
 .footer {
-    @extend %clearfix;
     text-align: center;
     border-bottom: 2.2rem solid #44AA80;
+    padding-bottom: 20rem;
+    @extend %clearfix;
     .ingredient {
         letter-spacing: 0;
-        font-size: 1.5rem;
+        font-size: 1.8rem;
         border: 2px solid #000;
         margin: 2.5rem auto;
         width: 90%;
-        height: 5rem;
-        line-height: 5rem;
+        // padding: 0 1rem;
+        // display: inline-block;
+        // height: 5rem;
+        line-height: 3.2rem;
     }
     .info {
         padding: 2.2rem 0 4.2rem;
@@ -28,6 +31,7 @@
     }
 }
 .support {
+    display: none;
     position: absolute;
     position: fixed;
     bottom: 0;
