--- a/sp/css/layout/_helper.scss
+++ b/sp/css/layout/_helper.scss
@@ -38,6 +38,12 @@
 .pb-25 {
     padding-bottom: 2.5rem;
 }
+.w100 {
+    width: 100%!important;
+}
+.w50 {
+    width: 50%;
+}
 .w398 {
     width: 100%;
     max-width: 39.8rem;
