--- a/sp/css/layout/all.scss
+++ b/sp/css/layout/all.scss
@@ -2,7 +2,7 @@
 //    Layout
 // =======================
 @import "module";
-@import "header";
+// @import "header";
 @import "index";
 @import "footer";
 @import "helper";
