--- a/sp/css/base/_base.scss
+++ b/sp/css/base/_base.scss
@@ -32,7 +32,8 @@ h1, h2, h3, h4, h5, h5, h6 {
     font-family: $font-body;
 }
 img {
-    max-width: 100%;
+    // max-width: 100%;
+    width: 100%;
     vertical-align: middle;
 }
 li, ol {
