--- a/sp/css/layout/_index.scss
+++ b/sp/css/layout/_index.scss
@@ -25,15 +25,14 @@
         z-index: 99;
         left: 5.2rem;
         top: 4rem;
+        width: 29%;
     }
     .dolar {
         top: 1.4rem;
         left: 1rem;
         overflow: hidden;
         position: absolute;
-        width: 100%;
-        max-width: 23rem;
-        height: 23rem;
+        width: 30%;
         border-radius: 50%;
         .shiny {
             position: absolute;
@@ -42,7 +41,7 @@
             z-index: 10;
             display: block;
             width: 8rem;
-            height: 45rem;
+            height: 55rem;
             margin-top: .7rem;
             transform: rotate(45deg);
             background-image: linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
@@ -53,6 +52,7 @@
         position: absolute;
         right: .5rem;
         bottom: 1rem;
+        width: 32%;
         img {
             max-width: 95%;
         }
@@ -73,7 +73,7 @@
     }
     .textNews {
         font-size: 2.8rem;
-        line-height: 3.5rem;
+        line-height: 3.6rem;
     }
     .local_02_item01 {
         position: relative;
@@ -94,6 +94,7 @@
     .wrapListNews {
         padding: 5.5rem 4rem;
         background: url('../image/background_01.png') no-repeat center 24rem;
+        background-size: 100% 100%;
         min-height: 200.1rem;
         .title_h3 {
             padding-bottom: 2rem;
@@ -119,11 +120,12 @@
         }
     }
     .textNews {
-        width: 100%;
-        max-width: 37rem;
+        width: 58%;
+        // max-width: 37rem;
         float: left;
     }
     .thumbImg {
+        width: 40%;
         float: right;
     }
 }
@@ -132,6 +134,7 @@
 .local_03 {
     position: relative;
     .handScroll {
+        width: 50%;
         position: absolute;
         top: 40%;
     }
@@ -145,6 +148,7 @@
     padding-top: 3.8rem;
     // margin-top: 11.5rem;
     background: url('../image/background_02.png') no-repeat center 23rem;
+    background-size: 100% 100%;
     padding-bottom: 11.3rem;
     .title_h2 {
         position: relative;
@@ -154,7 +158,7 @@
         padding-top: 6rem;
         .listFade01 {
             position: relative;
-            padding-left: 4rem;
+            padding-left: 5%;
             @extend %clearfix;
             &:first-child {
                 .desFade {
@@ -163,15 +167,16 @@
                 }
             }
             &:nth-child(2) {
+                margin-top: 1%;
                 .itemsFade {
                     margin-left: 1rem;
-                    margin-top: -6rem;
+                    margin-top: -2%;
                 }
             }
             &:nth-child(3) {
-                margin-top: 2rem;
+                margin-top: 2%;
                 .itemsFade {
-                    margin-top: -4.4rem;
+                    margin-top: -7%;
                 }
             }
             &:nth-child(4) {
@@ -186,9 +191,11 @@
                 }
             }
             .itemsFade {
+                width: 47%;
                 float: left;
             }
             .desFade {
+                width: 50%;
                 float: left;
             }
         }
@@ -208,6 +215,7 @@
         position: relative;
         // margin-top: -2.4rem;
         background: url('../image/background_03.png') no-repeat center;
+        background-size: 100% 100%;
         .noteAds {
             padding: 1.5rem 0 3.5rem;
         }
@@ -215,15 +223,15 @@
     .listAds01 {
         position: relative;
         @extend %clearfix;
-        padding: 0 3.5rem 28.7rem 3.5rem;
+        padding: 0 3.5rem 36% 3.5rem;
         .title_h3 {
             padding: 3.7rem 0 2.6rem;
         }
     }
     .textAds {
         p {
-            font-size: 1.8rem;
-            line-height: 3rem;
+            font-size: 2.4rem;
+            line-height: 3.4rem;
         }
     }
     .img_ads01 {
@@ -231,6 +239,8 @@
     }
     .imgAds {
         position: absolute;
+        left: 0;
+        right: 0;
         bottom: 0;
         &.img_ads01 {
             top: inherit;
@@ -241,29 +251,36 @@
     .listAds02 {
         margin-top: 5.8rem;
         background: url('../image/background_04.png') no-repeat;
+        background-size: 100% 100%;
         min-height: 95.6rem;
         position: relative;
         @extend %clearfix;
+        .imgAds {
+            position: relative;
+            margin-top: -5%;
+        }
         .title_h3 {
             position: relative;
             top: -2.7rem;
-            left: -5.2rem;
+            left: -2.2rem;
         }
         .textAds {
-            padding: 0 8rem 0 10rem;
+            text-align: justify;
+            padding: 0 10% 0 12%;
             p {
                 padding-right: 1.6rem;
             }
             span {
-                &.capt {
-                    display: inline;
-                }
                 display: block;
                 padding-top: 1rem;
                 font-size: 1.2rem;
+                &.capt {
+                    display: inline;
+                }
             }
         }
         .noteAds {
+            text-align: right;
             padding-top: 1.5rem;
         }
     }
@@ -283,7 +300,7 @@
     .listItems {
         .contentItems {
             position: relative;
-            padding: 3.1rem 5.2rem 4.1rem 12.6rem;
+            padding: 3.1rem 2.6rem 4.1rem 12.6rem;
             background: url('../image/background_news.png');
             &:before {
                 content: "";
@@ -307,13 +324,13 @@
                 display: block;
                 height: 2.8rem;
                 background: url('../image/bottom_shadow.png')no-repeat bottom ;
+                background-size: 100% 100%;
             }
         }
         .imgThumb {
             width: 34%;
-            position: absolute;
-            right: 0;
-            top: 0;
+            margin-top: 5%;
+            margin-left: 28%;
         }
     }
 }
@@ -357,18 +374,15 @@
         }
     }
     .listItems {
-        padding: 0 2.6rem;
-        // margin-left: -2rem;
+        padding: 2rem 2.6rem;
         li {
             float: left;
-            // width: 20.9rem;
             width: 48%;
             &:nth-child(odd) {
                 margin-right: 4%;
             }
         }
         .title_h4 {
-            // width: 20.9rem;
             height: 4.1rem;
             text-align: center;
             font-size: 2.4rem;
@@ -381,7 +395,7 @@
             }
         }
         p {
-            font-size: 1.8rem;
+            font-size: 2.4rem;
             line-height: 3.1rem;
         }
     }
@@ -400,10 +414,13 @@
         }
     }
     .listItems {
+        width: 95%;
+        margin: auto;
         font-family: $font-micho;
         padding-left: 3.8rem;
         .items {
             float: left;
+            width: 50%;
         }
         .text {
             padding-right: 3rem;
@@ -411,7 +428,12 @@
         }
         .avatar {
             float: left;
+            padding-left: 3%;
         }
+    }
+    .logo_noguchi {
+        width: 45%;
+        margin: auto;
     }
     + .arrow {
         padding: 7rem 0 5rem;
@@ -421,6 +443,7 @@
 ------------------------------------*/
 .local_10 {
     .listFade {
+        padding: 0 1%;
         display: flex;
         justify-content: center;
         @extend %clearfix;
@@ -437,11 +460,12 @@
 ------------------------------------*/
 .local_11 {
     background: url('../image/background_05.png') no-repeat center;
+    background-size: 100% 100%;
     .listItems {
         padding-top: 2rem;
     }
     .items {
-        padding: 0 6.8rem 0 7.3rem;
+        padding: 0 9% 0 9%;
         @extend %clearfix;
     }
     .avatar {
@@ -451,6 +475,7 @@
     .arrowstep {
         padding-bottom: 10rem;
         background: url('../image/arrow_step.png') no-repeat bottom;
+        background-size: 100%;
     }
     .description {
         padding-top: 3.5rem;
@@ -478,6 +503,7 @@
 .local_12 {
     margin-top: 10rem;
     background: url("../image/background_06.png") no-repeat center 7.3rem;
+    background-size: 100% 100%;
     font-family: $font-micho;
     padding: 0 3.4rem;
     .news01 {
@@ -498,14 +524,15 @@
     }
     .text {
         text-align: justify;
-        font-size: 1.7rem;
-        line-height: 3rem;
+        font-size: 2.6rem;
+        line-height: 3.4rem;
     }
     .listItems {
         padding-top: 4.5rem;
         margin: auto;
         + .note {
             padding: 2rem 0 2.5rem 0rem;
+            text-align: center;
         }
     }
     .title_h3 {
@@ -514,21 +541,21 @@
     .items {
         box-shadow: .2rem .1rem 0 rgba(0, 0, 0, 0.6);
         background: $color-a;
-        padding: 1.8rem 1.4rem;
+        padding: 3.6rem 2.4rem;
         &:nth-child(-n+3) {
             margin-bottom: 4.6rem;
         }
         .text {
-            padding: 1.7rem 0 1.4rem;
+            padding: 1.7rem 3% 1.4rem;
         }
     }
     .note {
-        font-size: 1.4rem;
+        font-size: 1.8rem;
         letter-spacing: 0;
     }
     .note2 {
         float: right;
-        font-size: 1.66rem;
+        font-size: 3.6rem;
         @extend %clearfix;
     }
 }
