--- a/sp/css/layout/_module.scss
+++ b/sp/css/layout/_module.scss
@@ -15,7 +15,6 @@ body {
     overflow: hidden;
     position: relative;
     background: #fff;
-    max-width: 780px;
     width: 100%;
     margin: 0 auto;
     @extend %clearfix;
@@ -41,22 +40,24 @@ body {
 }
 .title_B {
     color: $color-1;
-    font-size: 2.6rem;
+    font-size: 3.6rem;
     font-weight: bold;
     line-height: 1.4;
     // font-weight: bold;
 }
 .text {
-    font-size: 2.2rem;
-    line-height: 3.5rem;
+    font-size: 2.8rem;
+    line-height: 3.6rem;
 }
 
 .noteAds, .note {
     font-size: 2rem;
     text-align: left;
+    letter-spacing: 0;
 }
 .ctrbtn {
-    width: 64.8rem;
+    width: 82%;
+    // width: 64.8rem;
     margin: auto;
     position: relative;
     text-align: center;
@@ -76,6 +77,8 @@ body {
     }
 }
 .ctrbtn2 {
+    width: 50%;
+    margin: auto;
     position: absolute;
     bottom: 12%;
     left: 0;
